--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @question.title %></h1>
+<h1 class="mb-4"><%= @question.title %></h1>
 
 <time datetime="<%= @question.formatted_created_at %>">
   <%= @question.formatted_created_at %>
@@ -8,4 +8,6 @@
   <%=  @question.body %>
 </p>
 
+<%= link_to "Edit", edit_question_path(@question), class: 'btn btn-secondary' %>
+<%= link_to "Destroy", question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
 
