lesson 5, homework, add answer edit

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_with model: @question do |f| %>
   <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label"
+    <div class="col-sm-2 col-form-label">
       <%= f.label :title %>
     </div>
 
