--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -43,6 +43,7 @@
       <%= answer.body %>
     </p>
 
+    <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-sm btn-primary' %>
     <%= link_to 'Delete', question_answer_path(@question, answer), class: 'btn btn-danger btn-sm',
                 data: {method: :delete, confirm: "Are you sure?"} %>
   </article>
