--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,13 +1,3 @@
 <h1 class="mb-4">Edit answer:</h1>
 
-<%= form_with model: [@question, @answer] do |f| %>
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
-    </div>
-
-    <div class="col-sm-10 mb-2">
-      <%= f.text_area :body, class: 'form-control' %>
-    </div>
-
-    <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
-<% end %>
+<%= render 'form' %>
