--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label"
+    <div class="col-sm-2 col-form-label">
       <%= f.label :body %>
     </div>
 
