--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,26 +15,12 @@
 
 <h2>Write your answer:</h2>
 
-<%= render 'shared/errors', object: @answer %>
-
-<%= form_with model: [@question, @answer] do |f| %>
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
-    </div>
-
-    <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control' %>
-    </div>
-  </div>
-
-  <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
-<% end %>
+<%= render 'answers/form' %>
 
 <h2 class="mt-5">Answers</h2>
 
 <% @answers.each do |answer| %>
-  <article class="mb-3">
+  <article class="mb-3" id="answer-<%= answer.id %>">
     <time datetime="<%= answer.formatted_created_at %>">
       <%= answer.formatted_created_at %>
     </time>
@@ -43,7 +29,7 @@
       <%= answer.body %>
     </p>
 
-    <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-sm btn-primary' %>
+    <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-sm btn-info' %>
     <%= link_to 'Delete', question_answer_path(@question, answer), class: 'btn btn-danger btn-sm',
                 data: {method: :delete, confirm: "Are you sure?"} %>
   </article>
