--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, 'Edit answer' %>
+<% currently_at 'Questions' %>
+
 <h1 class="mb-4">Edit answer:</h1>
 
 <%= render 'form' %>
