--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,6 +5,8 @@
 
 <%= link_to 'New question', new_question_path, class: "btn btn-primary btn-lg" %>
 
+<%= paginate @questions %>
+
 <% @questions.each do |question| %>
   <article class="card mt-3">
     <div class="card-body">
@@ -16,7 +18,7 @@
         </time>
 
         <p class="my-2">
-          <%= question.body %>
+          <%= truncate strip_tags(question.body), length: 100, omission: '...(continued)' %>
         </p>
       </section>
 
@@ -26,4 +28,6 @@
     </div>
   </article>
 <% end %>
+
+<%= paginate @questions %>
 
