--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,12 +1,14 @@
+<% currently_at 'Questions' %>
+
 <h1 class="mb-4"><%= @question.title %></h1>
 
 <time datetime="<%= @question.formatted_created_at %>">
   <%= @question.formatted_created_at %>
 </time>
 
-<p>
-  <%=  @question.body %>
-</p>
+<div class="lead my-3">
+  <%= sanitize @question.body %>
+</div>
 
 <%= link_to "Edit", edit_question_path(@question), class: 'btn btn-secondary' %>
 <%= link_to "Destroy", question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
@@ -19,20 +21,11 @@
 
 <h2 class="mt-5">Answers</h2>
 
-<% @answers.each do |answer| %>
-  <article class="mb-3" id="answer-<%= answer.id %>">
-    <time datetime="<%= answer.formatted_created_at %>">
-      <%= answer.formatted_created_at %>
-    </time>
+<%= paginate @answers %>
 
-    <p>
-      <%= answer.body %>
-    </p>
+<%= render partial: 'answers/answer', collection: @answers,
+ as: :answer, locals: {question: @question} %>
 
-    <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-sm btn-info' %>
-    <%= link_to 'Delete', question_answer_path(@question, answer), class: 'btn btn-danger btn-sm',
-                data: {method: :delete, confirm: "Are you sure?"} %>
-  </article>
-<% end %>
+<%= paginate @answers %>
 
 
