--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,13 +19,13 @@
 
 <%= render 'answers/form' %>
 
-<h2 class="mt-5">Answers</h2>
+<h2 class="mt-5 mb-3">Answers</h2>
 
-<%== pagy_bootstrap_nav @pagy %>
+<%== pagination @pagy %>
 
 <%= render partial: 'answers/answer', collection: @answers,
  as: :answer, locals: {question: @question} %>
 
-<%== pagy_bootstrap_nav @pagy %>
+<%== pagination @pagy %>
 
 
