--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -54,5 +54,5 @@
     </div>
   <% end %>
 
-  <%= f.submit (@user.new_record? ? "Register!" : "Save"), class: 'btn btn-primary btn-lg' %>
+  <%= f.submit (@user.new_record? ? "Register!" : t('global.button.save')), class: 'btn btn-primary btn-lg' %>
 <% end %>
