--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
-<% currently_at 'Home' %>
+<% currently_at t('menu.home') %>
 
-<h1>AskIt</h1>
+<h1><%= t('pages.index.title') %></h1>
 
 <footer>
   &copy; bodrovis <%= Time.now.year %>
