--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -22,5 +22,5 @@
     </div>
   </div>
 
-  <%= f.submit "Submit question!", class: 'btn btn-primary' %>
+  <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
 <% end %>
