--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide :page_title, 'Edit profile' %>
-<% currently_at 'Edit profile' %>
+<% provide :page_title, t('users.edit.title') %>
+<% currently_at t('users.edit.title') %>
 
-<h1 class="mb-4">Edit profile</h1>
+<h1 class="mb-4"><%= t('users.edit.title') %></h1>
 
 <%= render 'form' %>
