lesson 13 add 'Lokalise' app localization

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,5 @@
-<% provide :page_title, 'Questions' %>
-<% currently_at 'Questions' %>
+<% provide :page_title, t('menu.questions') %>
+<% currently_at t('menu.questions') %>
 
 <h1 class="mb-4">Questions:</h1>
 
