--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -4,7 +4,7 @@
       <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><%= nav_tab t('menu.home'), root_path, class: 'nav-link px-2', current_page: current_page %></li>
-          <li><%= nav_tab 'Questions', questions_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <li><%= nav_tab t('menu.questions'), questions_path, class: 'nav-link px-2', current_page: current_page %></li>
         </ul>
 
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
