lesson 14 - relationships, callbacks, gravatar

--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide :page_title, 'Edit answer' %>
+<% provide :page_title, t('pages.answers.edit.title') %>
 <% currently_at 'Questions' %>
 
-<h1 class="mb-4">Edit answer:</h1>
+<h1 class="mb-4"><%= t('pages.answers.edit.title') %></h1>
 
 <%= render 'form' %>
