--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -11,5 +11,5 @@
     </div>
   </div>
 
-  <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
+  <%= f.submit t('global.button.submit_answer'), class: 'btn btn-primary' %>
 <% end %>
