--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,34 +1,14 @@
 <% provide :page_title, t('menu.questions') %>
 <% currently_at t('menu.questions') %>
 
-<h1 class="mb-4">Questions:</h1>
+<h1 class="mb-4"><%= t('pages.questions.index.title') %></h1>
 
-<%= link_to 'New question', new_question_path, class: "btn btn-primary btn-lg mb-3" %>
+<%= link_to t('global.button.new_question'), new_question_path, class: "btn btn-primary btn-lg mb-3" %>
 
-<%== pagination @pagy %>
+<%= pagination @pagy %>
 
-<% @questions.each do |question| %>
-  <article class="card mt-3">
-    <div class="card-body">
-      <h4><%= question.title %></h4>
+<%= render @questions %>
 
-      <section class="card-text">
-        <time datetime="<%= question.formatted_created_at %>">
-          <small><%= question.formatted_created_at %></small>
-        </time>
-
-        <p class="my-2">
-          <%= truncate strip_tags(question.body), length: 100, omission: '...(continued)' %>
-        </p>
-      </section>
-
-      <%= link_to "Show", question_path(question), class: 'btn btn-primary' %>
-      <%= link_to "Edit", edit_question_path(question), class: 'btn btn-secondary' %>
-      <%= link_to "Destroy", question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
-    </div>
-  </article>
-<% end %>
-
-<%== pagination @pagy %>
+<%= pagination @pagy %>
 
 
