--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<% currently_at 'Questions' %>
+<% currently_at t('pages.questions.title') %>
 
 <h1 class="mb-4"><%= @question.title %></h1>
 
@@ -10,16 +10,21 @@
   <%= sanitize @question.body %>
 </div>
 
-<%= link_to "Edit", edit_question_path(@question), class: 'btn btn-secondary' %>
-<%= link_to "Destroy", question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
+<div class="mb-3">
+  <%= @question.user.gravatar %>
+  <%= @question.user.name_or_email %>
+</div>
+
+<%= link_to t('global.button.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+<%= link_to t('global.button.delete'), question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
 
 <hr class="my-3">
 
-<h2>Write your answer:</h2>
+<h2><%= t('pages.questions.show.write_answer') %></h2>
 
 <%= render 'answers/form' %>
 
-<h2 class="mt-5 mb-3">Answers</h2>
+<h2 class="mt-5 mb-3"><%= t('pages.questions.show.answers') %></h2>
 
 <%== pagination @pagy %>
 
