--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,6 +15,9 @@
   <%= @question.user.name_or_email %>
 </div>
 
+<%= render 'comments/commentable', commentable: @question, comment: @comment,
+  html_id: 'questionComments'%>
+
 <%= link_to t('global.button.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
 <%= link_to t('global.button.delete'), question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
 
