lesson 16 many to many, tags, select2, ajax

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-lang="<%= I18n.locale %>">
   <head>
     <meta charset="utf-8">
     <title><%= full_title(yield(:page_title)) %></title>
@@ -16,7 +16,7 @@
     <%= stylesheet_link_tag "application" %>
   </head>
 
-  <body>
+  <body data-lang="<%= I18n.locale %>">
     <%= yield :main_menu %>
 
     <main class="container mt-3">
