--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,4 +2,5 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'bootstrap/scss/transitions';
 
-@import 'tom-select/dist/css/tom-select.bootstrap5'
+@import 'select2';
+@import 'select2-bootstrap-5-theme';
