--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,9 +8,9 @@
 
   <%= form_with url: questions_path, method: :get do |f| %>
     <div class="mb-3">
-      <%= f.collection_select :tag_ids, (@tags || []), :id, :title, {selected: params[:tag_ids]},
+      <%= f.collection_select :tag_ids, @tags, :id, :title, {selected: params[:tag_ids]},
         multiple: true, required: true,
-        class: 'js-multiple-select', data: {'ajax-url': '/api/tags'} %>
+        class: 'js-multiple-select w-100' %>
     </div>
 
     <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
