remove select2, jquery, add tom-select

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -23,8 +23,7 @@
 @import "bootstrap/scss/alert";
 @import "bootstrap/scss/transitions";
 
-@import 'node_modules/select2/dist/css/select2.css';
-@import 'node_modules/select2-bootstrap-5-theme/dist/select2-bootstrap-5-theme.css';
+@import 'tom-select/dist/css/tom-select.bootstrap5';
 
 // Utilities
 @import "bootstrap/scss/utilities/api";
