--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,7 +1,7 @@
-<%= render 'shared/errors', object: @user %>
+<%= render 'shared/errors', object: user %>
 
 
-<%= form_with model: @user do |f| %>
+<%= form_with model: [:admin, user] do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
       <%= f.label :email %>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :role, class: 'form-control-plaintext form-control-lg', readonly: true %>
+      <%= f.select :role, user_roles, {}, class: 'form-control form-control-lg' %>
     </div>
   </div>
 
@@ -52,17 +52,6 @@
     </div>
   </div>
 
-  <% unless @user.new_record? %>
-    <div class="mb-3 row">
-      <div class="col-sm-2 col-form-label">
-        <%= f.label :old_password %>
-      </div>
-
-      <div class="col-sm-10">
-        <%= f.password_field :old_password, class: 'form-control form-control-lg' %>
-      </div>
-    </div>
-  <% end %>
-
-  <%= f.submit (@user.new_record? ? "Register!" : t('global.button.save')), class: 'btn btn-primary btn-lg' %>
+  <% t_key = (user.new_record? ? "register" : "save") %>
+  <%= f.submit t(t_key, scope: 'users.global.forms'), class: 'btn btn-primary btn-lg' %>
 <% end %>
