--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,14 +8,18 @@
   class: 'btn btn-secondary' %>
 </div>
 
+<%= pagination @pagy %>
+
+<% scope = 'activerecord.attributes.user' %>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Created at</th>
-      <th scope="col">Updated at</th>
+      <th scope="col"><%= t 'activerecord.attributes.user.name', scope: scope %></th>
+      <th scope="col"><%= t 'activerecord.attributes.user.email', scope: scope %></th>
+      <th scope="col"><%= t 'activerecord.attributes.user.role', scope: scope %></th>
+      <th scope="col"><%= t 'activerecord.attributes.user.created_at', scope: scope %></th>
+      <th scope="col"></th>
     </tr>
   </thead>
 
